Modify pcb fig in hardware.tex. Add pcb fig.

--- a/Rektor_2017/Hardware/Hardware.tex
+++ b/Rektor_2017/Hardware/Hardware.tex
@@ -170,11 +170,11 @@ Dizajn elektroničkog sklopovlja izrađen je u CAD alatu \textit{Altium Designer
 
 Funkcionalnost elektroničkog sklopovlja i programske potpore je provjerena izradom prototipa. Prototip je realiziran perforiranom pločicom, na koju su postavljene i povezane sve bitne komponente, prvenstveno pogoni koračnih motora. Upravljanje pogonima koračnih motora omogućeno je razvojnom pločicom \textit{STM Discovery}, baziranom na STM32 mikrokontroleru serije F4, koji je korišten i u konačnom posebno prilagođenom sklopovlju.
 
-TU DODATI 3D MODEL SKLOPOVLJA
+
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{figures/arducopter_slot_pcb.png}
+	\includegraphics[width=0.6\textwidth]{figures/arducopter_pcb.png}
 	\caption{3D model elektroničkog sklopovlja}
 	\label{Slika:3D_PCB}
 \end{figure}
