--- a/Rektor_2017/CAD/CAD.tex
+++ b/Rektor_2017/CAD/CAD.tex
@@ -166,27 +166,28 @@
 
 CAD MODEL mehaničke konstrukcije - BRUNO
 
-U ovom poglavlju je opisana mehanička konstrukcija letjelice. Osnova je postojeća laboratorijska letjelica  \textit{ARDUCOPTER}. Letjelica  \textit{ARDUCOPTER} je standarnog dizajna, s četiri pogonska \textit{brushles DC} motora s pripadnim  \textit{ESC} pogonima. Zbog jednostavnog i modluarnog dizajna, letjelica je prikladna platforma za razne promjene i proširenja raznim upravljačkim uređajima, senzorima i aktuatorima. U laboratoriju trenutno postoji nekoliko modela letjelica ovog tipa koje se koriste za većinu eksperimenata. Dizajn i veličina letjelice je prikladna za većinu eksperimenata koji se provode u laboratoriju, uključujući planiranje i izvođenje trajektorija u prostoru, manipulaciju objekata i drugo. Upravo zato odlučeno je modificirati jednu od postojećih konstrukcija te izraditi platformu za eksperimentalno testiranje novog koncepta upravljanja višerotorskom letjelicom. Glavna modifikacija se odnosi na dizajniranje i izradu mehanizma kojim će se omogućiti pomak mase na kraku. Također, potrebno je smjestiti sve ostale komponente nužne za upravljanje letjelicom, poput kontrolera leta i upravljačkog sklopovlja pomičnih masa. Za izradu dizajna je korišten CAD alat \textit{SOLIDWORKS}.
+U ovom poglavlju opisana je mehanička konstrukcija letjelice. Osnova je postojeća laboratorijska letjelica  \textit{ArduCopter}. Letjelica  \textit{ArduCopter} standarnog je dizajna, s četiri pogonska \textit{beskolektorska DC} motora s pripadnim  elektroničkim upravljačima brzine(\textit{ESC - eng. Electronic Speed Control}). Zbog jednostavnog i modularnog dizajna, letjelica je prikladna platforma za razne promjene i proširenja raznim upravljačkim uređajima, senzorima i aktuatorima. U LARICS laboratoriju trenutno postoji nekoliko modela letjelica ovog tipa koje se koriste za većinu eksperimenata. Dizajn i veličina letjelice prikladna je za većinu eksperimenata koji se provode u laboratoriju, uključujući planiranje i izvođenje trajektorija u prostoru, manipulaciju objekata i drugo. Upravo zato odlučeno je modificirati jednu od postojećih konstrukcija te izraditi platformu za eksperimentalno testiranje novog koncepta upravljanja višerotorskom letjelicom. Glavna modifikacija se odnosi na dizajniranje i izradu mehanizma kojim će se omogućiti pomak mase na kraku. Također, potrebno je smjestiti sve ostale komponente nužne za upravljanje letjelicom, poput kontrolera leta i upravljačkog sklopovlja pomičnih masa. Za izradu dizajna je korišten CAD alat. Konačni 3D izgled modificirane letjelice prikazan je slikom \ref{Slika:3D_drone_final}.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/arducopter_with_PCB.png}
-	\caption{3D model modificirane letjelice ARDUCOPTER}
+	\caption{3D model modificirane letjelice \textit{ArduCopter}}
 	\label{Slika:3D_drone_final}
 \end{figure}
 
-\subsection{Letjelica  \textit{ARDUCOPTER}}
+\subsection{Letjelica  \textit{ArduCopter}}
 
-Osnova konstrukcije letjelice s pomičnim masama je multirotorska letjelica  \textit{ARDUCOPTER}, prikazano slikom \ref{fig:3D_drone_original}.  \textit{ARDUCOPTER} je laboratorijska letjelica pogonjena s 4 \textit{brushless DC} motora. Koncept upravljanja je klasični, brzom promjenom brzina vrnje motora, ostvaruju se zadani kutevi i kutne brzine letjelice. Letjelica ima jednostavan dizajn, što omogućava jednostavne nadogradnje, poput različitih upravljačkih uređaja, senzora i aktuatora. Sva proširenja letjelice se jednostavno dodaju jedno iznad drugoga na već predviđene položaje iznad razine krakova u centru letjelice. Zbog svega navedenog,  \textit{ARDUCOPTER} je odabran kao osnovna platforma za izradu multirotorske letjelice s pomičnim masama.
+Osnova konstrukcije letjelice s pomičnim masama je multirotorska letjelica  \textit{ArduCopter}, prikazano slikom \ref{fig:3D_drone_original}.  \textit{ArduCopter} je laboratorijska letjelica pogonjena s 4 \textit{beskolektorska DC} motora. Klasičnim konceptom upravljanja, brzom promjenom brzina vrnje motora, ostvaruju se zadani kutevi i kutne brzine letjelice. Letjelica ima modularan dizajn, što omogućava jednostavne nadogradnje, poput različitih upravljačkih uređaja, senzora i aktuatora. Sva proširenja letjelice dodaju se jedno iznad drugoga na već predviđene položaje iznad razine krakova u centru letjelice. Zbog svega navedenog,  \textit{ArduCopter} je odabran kao osnovna platforma za izradu multirotorske letjelice s pomičnim masama.
 
+\medskip
 
-Postojeća mehanička konstrukcija letjelice  \textit{ARDUCOPTER} se u potpunosti koristi, a obuhvaća: 
+Postojeća mehanička konstrukcija letjelice  \textit{ArduCopter} se u potpunosti koristi, a obuhvaća: 
 \begin{center}
 	\begin{itemize}
 		\item Tijelo letjelice uključujući razvodnu ploču za napajanje iz baterije i prihvat slojeva za proširenje
 		\item 4 aluminijska kraka
 		\item 4 plastična zaustavna kraka
-		\item 4  \textit{brushless DC} motora s pripadnim \textbf{ESC} pogonima
+		\item 4  \textit{beskolektorska DC} motora s pripadnim \textbf{ESC} pogonima
 		\item 4 plastična propelera
 	\end{itemize}
 \end{center}
@@ -214,7 +215,7 @@ Predstavljenu postojeću letjelicu \textit{ARDUCOPTER} potrebno je modificirati 
 Budući da se novi koncept upravljanja letjelice zasniva na promjeni centra mase, koje je realizirano pomičnim masama na krakovima, potrebno je izraditi mehanizam kretanja pokretne mase po kraku letjelice. Kretanje pomične mase je linijsko, a mehanizam kretanja mora biti realiziran s minimalnim trenjem. Kretanje pokretne mase je ostvareno električnim aktuatorom.
 
 \subsubsection{Aktuator}
-Zadaća aktuatora pokretne mase je gibanje mase po kraku letjelice, čime se ostvaruje promjena centra mase letjelice. Kako bi ukupna masa letjelice bila manja, fizička masa aktuatora na svakom kraku se koristi kao pokretna masa. Za aktuator je odabran koračni motor NAPISATI MODEL, prikazan slikom \ref{fig:stepper_motor}. Specifikacije koračnog motora su prikazane tablicom \ref{tab:specifikacija_steppera}.
+Zadaća aktuatora pokretne mase je gibanje mase po kraku letjelice, čime se ostvaruje promjena centra mase letjelice. Kako bi ukupna masa letjelice bila manja, sam aktuator na svakom kraku se koristi kao pokretna masa. Za aktuator je odabran koračni motor \textit{NEMA 14}, prikazan slikom \ref{fig:stepper_motor}. Specifikacije koračnog motora su prikazane tablicom \ref{tab:specifikacija_steppera}.
 
 \begin{figure}[H]
 	\centering
@@ -243,14 +244,14 @@ Zadaća aktuatora pokretne mase je gibanje mase po kraku letjelice, čime se ost
 	\end{tabular}
 \end{table}
 
-Razlog zašto je odabran koračni motor je mogućnost korištenja upravljanja pozicijom motora u otvorenoj petlji. Točnije, pravilnim upravljanjem i brojanjem koraka koje je motor napravio, moguće je u svakom trenutku znati u kojem položaju se motor nalazi te samim time i na kojoj poziciji se nalazi pokretna masa. Ukoliko bi se koristio neki drugi tip motora, bilo bi potrebno dodati senzore poput enkodera kako bi se moglo pratiti kretanje i položaj mase na kraku.
+Koračni motor odabran je zato jer pruža mogućnost korištenja upravljanja pozicijom motora u otvorenoj petlji. Točnije, pravilnim upravljanjem i brojanjem koraka koje je motor napravio, moguće je u svakom trenutku znati u kojem položaju se motor nalazi te samim time i na kojoj poziciji se nalazi pokretna masa. Ako bi se koristio neki drugi tip motora, bilo bi potrebno dodati senzore poput enkodera kako bi se moglo pratiti kretanje i položaj mase na kraku.
 
 
 
 
 \subsubsection{Kretanje po kraku letjelice}
 
-Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje, odabran je klizni mehanizam prikazan slikom \ref{fig:klizni_mehanizam}. Klizni mehanizam je montiran s doljnje strane kraka, a za aluminijsku kvadratnu cijev je pričvršćen s dva vijka. Klizni mehanizam se sastoji od vodilice i kolica. Na kolicima se nalazi klizni mehanizam koji se sastoji od sitnih kuglica koje omogućavaju klizno gibanje s malim trenjem. Na kolica kliznog mehanizma je montiran posebno konstruiran prihvat koračnog motora(slika \ref{fig:stepper_bracket}), kojim se koračni motor učvršćuje na klizni mehanizam.
+Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje, odabran je klizni mehanizam prikazan slikom \ref{fig:klizni_mehanizam}. Klizni mehanizam je montiran s doljnje strane kraka, a za aluminijsku kvadratnu cijev je pričvršćen s dva vijka. Klizni mehanizam se sastoji od vodilice i kolica. Na kolicima se nalazi klizni mehanizam koji se sastoji od sitnih kuglica koje omogućavaju klizno gibanje s malim trenjem. Na kolica kliznog mehanizma montiran je posebno konstruiran prihvat koračnog motora(slika \ref{fig:stepper_bracket}), kojim se koračni motor učvršćuje na klizni mehanizam.
 
 
 \begin{figure}[H]
@@ -296,11 +297,11 @@ Zupčasta letva(slika \ref{fig:gear_rack}) je zaljepljena na bočnu stranu alumi
 
 \subsubsection{Izrada i montaža}
 
-Za dizajniranje mehaničke konstrukcije korišten je CAD alat \textit{SOLIDWORKS}. Navedeni alat omogućava 3D modeliranje svih dijelova od kojih je izrađena letjelica. Nakon dizajniranja svakog pojedinog dijela, prelazi se na spajanje dijelova u veće cjeline. Prednost 3D modeliranja je trenutni pregled izgleda konstrukcije, kao i mogućnost izvoza svakog pojedinog dijela u neki od standardnih formata. 
+Za dizajniranje mehaničke konstrukcije korišten je CAD alat, koji omogućava 3D modeliranje svih dijelova od kojih je izrađena letjelica. Nakon dizajniranja svakog pojedinog dijela, prelazi se na spajanje dijelova u veće cjeline. Prednost 3D modeliranja je trenutni pregled izgleda konstrukcije, kao i mogućnost izvoza svakog pojedinog dijela u neki od standardnih formata. 
 
-U izradi nekih dijelova konstrukcije korištena je tehnologija 3D printanja. 3D printanje je jednostavno i efikasno rješenje u izradi prototipa. Nakon izrade 3D modela u nekom od CAD alata, u ovom slučaju \textit{SOLIDWORKS}, radi se priprema pojedinog elementa za izradu. Priprema uključuje učitavanje elementa u poseban softver proizvođača 3D printera. Nakon postavljanja svih parametara izrade poput preciznosti, ispunjenosti i dr. slijedi izvoz podataka u poseban format koji koristi 3D printer. Nakon toga slijedi izrada koja je u potpunosti automatizirana.
+U izradi nekih dijelova konstrukcije korištena je tehnologija 3D printanja. 3D printanje jednostavno je i efikasno rješenje u izradi prototipa. Nakon izrade 3D modela u nekom od CAD alata, radi se priprema pojedinog elementa za izradu. Priprema uključuje učitavanje elementa u poseban softver proizvođača 3D printera. Nakon postavljanja svih parametara izrade poput preciznosti, ispunjenosti i dr. slijedi izvoz podataka u standardan \textit{gcode} format koji koristi 3D printer. Nakon toga slijedi izrada koja je u potpunosti automatizirana.
 
-Dodatno, za montažu kliznih mehanizama na aluminijske kvadratne cijevi bilo je potrebno precizno izbušiti rupe, kroz koje će se pomoću vijka pričvrstiti klizni mehanizam. Budući da je bila potrebna velika preciznost, korišten je CNC stroj.
+Dodatno, za montažu kliznih mehanizama na aluminijske kvadratne cijevi potrebno je precizno izbušiti rupe, kroz koje će se pomoću vijka pričvrstiti klizni mehanizam. Zbog toga je korišten CNC stroj.
 
 Nakon pripreme svih dijelova, slijedi montaža. Slikom \ref{fig:arm_assembly} prikazan je konačni 3D model pokretne mase na kraku letjelice.
 
@@ -345,11 +346,11 @@ STVARNA SLIKA!!!!
 \end{figure}
 
 \subsection{Horizontalna montaža sastavnih dijelova letjelice}
-Modularni dizajn letjelice \textit{ARDUCOPTER} omogućava jednostavno proširenje letjelice. Iznad ravnine krakova moguće je dodavati razne slojeve. Slojevi su razmaknuti distancerima s navojem M3. 
+Modularni dizajn letjelice \textit{ArduCopter} omogućava jednostavno proširenje letjelice. Iznad ravnine krakova moguće je dodavati razne slojeve. Slojevi su razmaknuti distancerima s navojem M3. 
 
 \subsubsection{Sloj kontrolera leta}
 
-Kontroler leta \textit{PIXHAWK} se koristi za cjelokupno upravljanje letjelicom. U samom kontroleru su ugrađeni svi potrebni senzori za let, poput žiroskopa, akcelerometra i dr. Kako bi što točnije očitavali kuteve letjelice, kontroler je potrebno postaviti što bliže osima rotacije letjelice. U ovom slučaju kontroler je postaljen neposredno iznad ravnine krakova. Položaj kontrolera leta prikazan je slikom \ref{fig:slot_pixhawk}.
+Kontroler leta \textit{Pixhawk} se koristi za cjelokupno upravljanje letjelicom. U samom kontroleru su ugrađeni svi potrebni senzori za let, poput žiroskopa, akcelerometra i dr. Kontroler leta potrebno je postaviti što bliže osima rotacije letjelice. U ovom slučaju kontroler je postaljen neposredno iznad ravnine krakova. Položaj kontrolera leta prikazan je slikom \ref{fig:slot_pixhawk}.
 
 \begin{figure}[H]
 	\centering
@@ -361,8 +362,8 @@ Kontroler leta \textit{PIXHAWK} se koristi za cjelokupno upravljanje letjelicom.
 
 \subsubsection{Sloj upravljačkog sklopovlja}
 
-Iznad kontolera leta postavljeno je posebno izrađeno elektroničko slopovlje za upravljanje koračnim motorima. Dimenzija tiskane pločice je jednaka dimenziji bazne ploče koja se nalazi u ravnini krakova. Pločica je 
-razmaknuta od kontrolera leta pomoću distancera. Pozicioniranje upravljačkog sklopovlja je prikazano slikom \ref{fig:slot_pcb}.
+Iznad kontolera leta postavljeno je posebno izrađeno elektroničko slopovlje za upravljanje koračnim motorima. Dimenzija tiskane pločice jednaka je dimenziji bazne ploče koja se nalazi u ravnini krakova. Pločica je 
+razmaknuta od kontrolera leta pomoću distancera. Pozicioniranje upravljačkog sklopovlja prikazano je slikom \ref{fig:slot_pcb}.
 
 
 \begin{figure}[H]
